# blackbox

./: .env.example  .eslintrc.json  .gitignore  CLAUDE.md  PLAN.md  README.md  VISION.md  biome.json  docker-compose.yml  litellm-config.yaml  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
apps/desktop/: index.html  package.json  vite.config.ts  vitest.config.ts
apps/desktop/src/: App.css  App.test.tsx  App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: main.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: theme-provider.test.tsx  theme-provider.tsx
apps/desktop/src/components/settings/: appearance-toggle.test.tsx  appearance-toggle.tsx  hotkey-recorder.tsx
apps/desktop/src/components/ui/: button.module.css  button.tsx  checkbox.module.css  checkbox.test.tsx  checkbox.tsx  index.ts  input.module.css  input.tsx  segmented-control.module.css  segmented-control.tsx  separator.module.css  separator.tsx  toggle.tsx  (+1 more)
apps/desktop/src/lib/: commands.ts  keyboard-utils.ts  settings-store.ts  settings.ts  theme.ts
apps/desktop/src/test/: setup.ts
apps/desktop/src/views/: index.ts  main-view.tsx  settings-view.tsx
example/: agent.ts
example/traces/: sample-trace-1.json  sample-trace-2-loop.json
examples/capture-agent/: CLAUDE.md
examples/capture-agent/traces/: sample-trace-1.json
examples/demo-rules/: TODO.md
examples/sample-agent/: TODO.md
scripts/: setup-ollama.sh  test-langfuse.ts  test-litellm.ts  test-ollama.ts
tests/: integration.test.ts
