[package]
name = "blackbox-desktop"
version = "0.1.0"
description = "Blackbox Desktop Menu Bar App"
authors = ["Blackbox"]
edition = "2021"

[lib]
name = "blackbox_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
